# Cross-Platform-Task-Automation-Dashboard

./: README.md
backend/: .pre-commit-config.yaml  pyproject.toml
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/aura/task_automation/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/core/injection/: injection_container.dart
flutter_app/lib/features/task/data/models/: task_model.dart
flutter_app/lib/features/task/data/repositories/: task_repository_impl.dart
flutter_app/lib/features/task/domain/entities/: task_entity.dart
flutter_app/lib/features/task/domain/repositories/: task_repository.dart
flutter_app/lib/features/task/domain/usecases/: add_task.dart  toggle_task.dart
flutter_app/lib/features/task/presentation/bloc/: task_bloc.dart  task_event.dart  task_state.dart
flutter_app/lib/features/task/presentation/pages/: task_dashboard_page.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
