[project]
name = "task-automation-dashboard"
version = "0.1.0"
description = ""
authors = [
    { name = "Kamal Dhital", email = "kamaldhitalofficial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
